# gh-forgejo-shim

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  PRODUCT.md  README.md  pyproject.toml
.beads/: README.md  config.yaml  interactions.jsonl  issues.jsonl  metadata.json
.github/workflows/: ci.yml  release.yml
crates/gh-forgejo-shim/: Cargo.toml
crates/gh-forgejo-shim/src/: auth.rs  bootstrap.rs  cli.rs  codex_smoke.rs  config.rs  create.rs  doctor.rs  external.rs  forgejo.rs  git_recorder.rs  gui_path.rs  lib.rs  main.rs  normalize.rs  read_only.rs  repo.rs  routing.rs  shim.rs  trace.rs  trace_summary.rs
crates/gh-forgejo-shim/tests/: cli_scaffold.rs  http_normalization.rs
crates/gh-forgejo-shim/tests/support/: mod.rs
docs/: configuration.md  installation.md  pipx-to-rust-migration.md  rollback.md
docs/dev/: testing.html
docs/implementation/rust-rewrite/: IMPLEMENT.md  PLAN.html  README.md  phase-01-contract.md  phase-02-workspace.md  phase-03-dispatcher.md  phase-04-config-auth.md  phase-05-http-normalization.md  phase-06-read-only-compat.md  phase-07-mutating-workflows.md  phase-08-diagnostics-setup.md  phase-08-manual-validation.md  phase-09-packaging-release.md  phase-10-cutover-remove-python.md
docs/implementation/rust-rewrite/contracts/: README.md  compatibility-contract.v1.json
docs/testing/: codex-trace.html  development-test.html
docs/turns/: 2026-05-31-bootstrap-command-and-gfj-alias.html  2026-05-31-broaden-gh-compatibility.html  2026-05-31-build-gh-forgejo-shim-v1.html  2026-05-31-discover-fj-macos-auth-config.html  2026-05-31-fix-codex-pr-board-compatibility.html  2026-05-31-fix-codex-pr-status-envelope.html  2026-05-31-gui-path-gh-discovery.html  2026-05-31-make-gh-shim-path-independent.html  2026-05-31-relax-shim-path-doctor-check.html  2026-05-31-shim-pr-list-repo-view.html  2026-06-01-2346-map-forgejo-ci-status.html  2026-06-05-1028-native-auth-helpers.html  2026-06-11-1310-catch-stale-forgejo-hosts.html  2026-06-11-1356-first-class-branch-api.html  2026-06-11-1818-keep-gh-available-after-uninstall.html  2026-06-11-1836-bootstrap-gui-path-check.html  2026-06-14-1406-restore-github-pr-delegation.html  2026-06-14-1853-add-forgejo-http-fixture-tests.html  2026-06-15-1754-fix-codex-gh-discovery.html  2026-06-16-1425-host-specific-forgejo-auth.html  2026-06-17-1457-fix-codex-gh-availability.html  2026-06-17-1641-surface-forgejo-pr-url.html  2026-06-19-1409-opt-in-trace-record-module.html  2026-06-19-1411-codex-probe-tracing.html  2026-06-19-1414-temporary-git-recorder-core.html
packaging/homebrew/: README.md
packaging/homebrew/Formula/: gh-forgejo-shim.rb.template
scripts/: package-release.sh
src/gh_forgejo_shim/: __init__.py  auth.py  bootstrap.py  cli.py  codex_remote.py  codex_smoke.py  config.py  create.py  doctor.py  external.py  forgejo.py  git_recorder.py  gui_path.py  normalize.py  repo.py  routing.py  shim.py  trace.py  trace_summary.py
tests/: test_auth.py  test_bootstrap.py  test_cli.py  test_cli_auth.py  test_cli_trace.py  test_codex_remote.py  test_codex_smoke.py  test_config.py  test_contract_fixtures.py  test_create.py  test_doctor.py  test_external.py  test_forgejo_integration.py  test_git_recorder.py  test_gui_path.py  test_normalize.py  test_repo.py  test_routing.py  test_shim.py  test_trace.py  test_trace_summary.py
tests/cli_parity/: README.md
tests/fixtures/rust-cli/: README.md
