[workspace]
members = ["crates/gh-forgejo-shim"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/dirtydishes/gh-forgejo-shim"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
