[package]
name = "gh-forgejo-shim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[lib]
name = "gh_forgejo_shim"
path = "src/lib.rs"

[[bin]]
name = "gh-forgejo-shim"
path = "src/main.rs"

[[bin]]
name = "gfj"
path = "src/bin/gfj.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
ureq = { version = "2.10", default-features = false, features = ["tls"] }
rpassword = "7.3"

[lints]
workspace = true
